infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titanium
  labels:
    name: titanium
